# py-fast-transaction-system

./: .gitignore  README.md  populate-db.py  pyproject.toml
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routes/: accounts.py  transactions.py
app/api/schemas/: account.py  transaction.py
app/application/interfaces/: account_repo.py  transaction_repo.py
app/application/services/: AccountService.py  TransactionService.py
app/domain/: exceptions.py
app/domain/entities/: account.py  transaction.py
app/infrastructure/: database.py
app/infrastructure/models/: account.py  transaction.py  user.py  user_permission.py  user_role.py
app/infrastructure/repositories/: account.py  transaction.py
tests/unit/: test_account_repository.py  test_transaction_repository.py
